[package]
name = "advent-of-code-2020"
version = "1.0.0"
authors = ["Simon Gomizelj <sgomizelj@mcquaig.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
bytecount = "0.6"
maplit = "1.0"
nom = "7"

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]
